# Xythrion

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml  linting.yml
postgres/: init.sql
xythrion/: __init__.py  __main__.py  bot.py  constants.py  context.py  databasing.py  network.py
xythrion/extensions/administration/: development.py  manager.py  warnings.py
xythrion/extensions/game_data/: __init__.py  factorio.py  warframe.py
xythrion/extensions/generation/: plotting.py  randoms.py
xythrion/extensions/meta/: __init__.py  dates.py  links.py
xythrion/extensions/requesters/: __init__.py  cats.py  reddit.py  tinyy.py  uwu.py  weather.py
xythrion/utils/: __init__.py  formatting.py  graphs.py  shortcuts.py
